fixed horizontal scroll

--- a/trip_planner_fe/src/css/Home.css
+++ b/trip_planner_fe/src/css/Home.css
@@ -2,7 +2,7 @@
 @media (max-width: 1920px) {
   .hero {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 95vh;
   }
 
@@ -28,13 +28,14 @@
 
   .hero p {
     font-size: 1.25rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
 
   .hero-button {
     background-color: var(--button-color);
     color: #2b2b2b;
     border: none;
+    text-decoration: none;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     font-weight: bold;
@@ -50,6 +51,7 @@
   .hero-icon {
     position: absolute;
     width: 40vw;
+    height: auto;
     top: 20vh;
     right: 0%;
     z-index: -1;
@@ -66,7 +68,7 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   width: 100%;
-  margin-top: 0;
+  margin-top: 200px;
 }
 
 /* Feature-Cards */
@@ -137,13 +139,14 @@
 
   .hero p {
     font-size: 1.25rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
 
   .hero-button {
     background-color: var(--button-color);
     color: #2b2b2b;
     border: none;
+    text-decoration: none;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     font-weight: bold;
